--- a/hub/index.html
+++ b/hub/index.html
@@ -57,7 +57,7 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "WRIO Internet OS is a blockchain-powered machine-readable Web 3.0 platform focused on automatic data processing and a user-centric secure browsing experience. The name originates from the acronym of “webRunes Input/Output Internet Operating System”. Browser-driven approach allows the system to work with any device that has a browser and Internet connection, which is reflected in the project motto: “All you need is a browser”.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "All user actions and browsing are performed through a personal WRIO Internet OS web dashboard. User-centric web dashboards are the next Big Thing and semantics, automatic data processing and blockchain powered apps are new trends that will replace many of the visionary technology projects of the past. We will see user-centric versions of googles, skypes, ebays, paypals, facebooks, ubers and more.",
+        "All user actions and browsing are performed through a personal WRIO Internet OS web dashboard. User-centric web dashboards are the next Big Thing and semantics, automatic data processing and blockchain powered apps are new trends that will replace many of the visionary technology projects of the past. We will see user-centric version of Google, Skype, eBay, PayPal, Facebook, Uber and more.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Evolution of user-centric web will result in the era of smart predictive systems – Individual Assistants (IA) that will replace today’s primitive virtual assistants. IA is a global network of intelligent agents that continuously exchange data with each other. Their use will be universal and will cover all areas of life: connected homes management systems in view of the weather and according to the schedule, needs and preferences of each family member; automatic secretaries and data processing assistants; business, healthcare and education consultants; and etc.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
@@ -188,7 +188,7 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "The user-centric approach will revolutionize the browsing experience. Currently users are only able to choose a browser and define a set of plugins to be used with it. But with WRIO internet OS user control goes one step higher: hubs authors determine the content, yet the display style and the set of functions is defined by the user. Web 2.0 sites are replaced with user-centric hubs of Web 3.0.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Default WRIO Internet OS editor creates web-pages based on schemas in semantic format JSON-LD (Linked Data): an HTML file is a set of static data (key-value). The page format has been developed by Google, Microsoft, Yahoo and Yandex. Page indexation requires no search engine optimization or syntax analysis, which ensures high organic search positions. The format of pages is machine-readable, which enables automatic data processing. This paves the way to the development of automatic curated web: metadata of each created page is recorded in the blockchain, then it is correlated to the user’s interest matrix stored in the profile. If there is a match, the page is displayed in the user’s web dashboard (webtop), which is a key element of user-centric web."
+        "Default WRIO Internet OS editor creates web-pages based on schemas in semantic format JSON-LD (Linked Data): an HTML file is a set of static data (key-value). The page format has been developed by Google, Microsoft, Yahoo and Yandex. Page indexation requires no search engine optimization or syntax analysis, which ensures high organic search positions. The format of pages is machine-readable, which enables automatic data processing. This paves the way for the development of an automatically curated web: metadata of each created page is recorded in the blockchain, then it is correlated to the users’ interest matrix stored in the profile. If there is a match, the page is displayed in the user’s web dashboard (webtop) — a key element of the user-centric web."
         ]
         },
         {
@@ -346,7 +346,7 @@
         "@type": "Article",
         "name": "",
         "about": "A web desktop or webtop is a desktop environment embedded in a web browser or similar client application.",
-        "url": "https://en.wikipedia.org/wiki/Web_desktop?'webtop'128,708,external"
+        "url": "https://en.wikipedia.org/wiki/Web_desktop?'webtop'128,715,external"
         }
         ],
         "image": [
@@ -408,9 +408,9 @@
         "description": [
         "Layers:",
         "00. Global Data Pool. Linked Data storage: HTML pages, contain a link to wrioos.js that interlinks it to a default WRIO OS node. Can be stored at any static content hosting",
-        "01. WRIO Internet OS. A decentralized network of WRIO OS nodes that render Linked Data and turn them into hubs: a node is required only for those users who do not use the WRIO OS browser / plugin / mobile app",
+        "01. WRIO Internet OS. A decentralized network of WRIO OS nodes that render Linked Data and turn them into hubs: a node is required only for users who do not use the WRIO OS browser / plugin / mobile app",
         "02. Themes. Used to display hubs and user interface of cloud and distributed applications in the style selected by the user",
-        "03. Cloud and distributed applications. A set of applications determining functions of hubs: sharing in selected social media, comments, and etc., including web dashboards applications and applications using the blockchain",
+        "03. Cloud and distributed applications. A set of applications determining functions of hubs: sharing in selected social media, comments, etc., including web dashboards applications and applications using the blockchain",
         "04. Smart Contracts. Self-executing algorithms interacting with the blockchain",
         "05. Blockchain. A metadata base and assets repository"
         ]
