--- a/hub/index.html
+++ b/hub/index.html
@@ -43,9 +43,9 @@
         "name": "About",
         "about": "WRIO Internet OS is a PaaS and its cloud applications are SaaS (operating on remote servers). Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications act as conventional desktop programs with the intention to replace desktop OSs in the near future.",
         "articleBody": [
-        "“I have a dream for the Web in which computers become capable of analyzing all the data on the Web – the content, links, and transactions between people and computers.” A “Semantic Web”, which makes this possible, has yet to emerge, but when it does, the day-to-day mechanisms of trade, bureaucracy and our daily lives will be handled by machines talking to machines. The “intelligent agents” people have touted for ages will finally materialize.” — Tim Berners-Lee, the inventor of the World Wide Web.",
+        "“I have a dream for the Web in which computers become capable of analyzing all the data on the Web – the content, links, and transactions between people and computers. A 'Semantic Web', which makes this possible, has yet to emerge, but when it does, the day-to-day mechanisms of trade, bureaucracy and our daily lives will be handled by machines talking to machines. The 'intelligent agents' people have touted for ages will finally materialize.” — Tim Berners-Lee, inventor of the World Wide Web.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Information is everything. The number of Internet users is nearing 4 billion, while generated information doubles every 18 months. There are 23 bln connected devices in the world and their number doubles every 36 months. Global Internet traffic in 2020 will be equivalent to 100 times the volume of the entire global Internet in 2005. We are rushing into the era of Internet of Things and Big Data where an automated processing of data will be a must. It will require a platform that will unite the web of machines and users. The key for this unification will be a machine-readable data format. Automatic processing of data will pave the way for a user-centric Web 3.0, where users receive screened information automatically based on their interests.",
+        "Information is everything. The number of Internet users is nearing 4 billion, while generated information doubles every 18 months. There are 23 billion connected devices in the world and this number doubles every 36 months. Global Internet traffic in 2020 will be equivalent to 100 times the volume of the entire global Internet in 2005. We are rushing headlong into the era of the Internet of Things and Big Data where an automated processing of data will be a must. It will require a platform that will unite the web of machines and users. The key for this unification will be a machine-readable data format. Automatic processing of data will pave the way for a user-centric Web 3.0, where users receive screened information automatically based on their interests.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Web 3.0 = Semantics + Blockchain + Smart Contracts",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
@@ -53,13 +53,13 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "A Blockchain is an open, distributed ledger that can record transactions between two parties efficiently and in a verifiable and permanent way.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Smart Contracts is a self-executing algorithms of interaction with the blockchain.",
+        "Smart Contracts are self-executing algorithms of interaction with the blockchain.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "WRIO Internet OS is a blockchain-powered machine-readable Web 3.0 platform focused on automatic data processing and a user-centric secure browsing experience. The name originates from the acronym of “webRunes Input/Output Internet Operating System”. Browser-driven approach allows the system to work with any device that has a browser and Internet connection, which is reflected in the project motto: “All you need is a browser”.",
+        "WRIO Internet OS is a blockchain-powered, machine-readable Web 3.0 platform focused on automatic data processing and a user-centric, secure browsing experience. The name originates from the acronym of “webRunes Input/Output Internet Operating System.” Its browser-driven approach allows the system to work with any device with a browser and Internet connection, which is reflected in the project motto: “All you need is a browser.”",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "All user actions and browsing are performed through a personal WRIO Internet OS web dashboard. User-centric web dashboards are the next Big Thing and semantics, automatic data processing and blockchain powered apps are new trends that will replace many of the visionary technology projects of the past. We will see user-centric version of Google, Skype, eBay, PayPal, Facebook, Uber and more.",
+        "All user actions and browsing are performed through a personal WRIO Internet OS web dashboard. User-centric web dashboards are the next Big Thing. Semantics, automatic data processing and blockchain-powered apps are powerful new trends that will soon replace many of the visionary technologies of the past. We will see user-centric version of Google, Skype, eBay, PayPal, Facebook, Uber and more.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Evolution of user-centric web will result in the era of smart predictive systems – Individual Assistants (IA) that will replace today’s primitive virtual assistants. IA is a global network of intelligent agents that continuously exchange data with each other. Their use will be universal and will cover all areas of life: connected homes management systems in view of the weather and according to the schedule, needs and preferences of each family member; automatic secretaries and data processing assistants; business, healthcare and education consultants; and etc.",
+        "The evolution of the user-centric web will result in the era of smart predictive systems – Individual Assistants (IA) that will replace today’s primitive virtual assistants. IA is a global network of intelligent agents continuously exchanging data with each other. Their use will be universal, covering all areas of life: connected homes management systems in view of the weather and according to the schedule, needs and preferences of each family member; automatic secretaries and data processing assistants; business, healthcare and education consultants, etc.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "All this and more will become possible after the development of the machine-readable technology that will unite the web of machines and users."
         ],
@@ -69,9 +69,9 @@
         "name": "Mission",
         "articleBody": [
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Machine-readable web is the first prerequisite for the computers to learn how to process the natural language. With the development of the project it will implement subsequent measures to solve the Chinese room problem. They will be related to the development of Semantic Field (see White Paper) and machine learning algorithms that will be discussed individually after the announcement of Individual Assistant project.",
+        "A machine-readable web is the first prerequisite for computers to learn how to process the natural language. With the development of the project it will implement subsequent measures to solve the Chinese room problem. They will be related to the development of Semantic Field (see White Paper) and machine learning algorithms to be discussed after the announcement of the Individual Assistant project.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "The mission is based on a solid interrelation of facts about modern web, its challenges and solutions with the aid of advanced technologies.",
+        "The mission is based on a solid interrelation of facts about the modern web, its challenges, and solutions with the aid of advanced technologies.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏"
         ]
@@ -80,15 +80,15 @@
         "@type": "Article",
         "name": "Web 2.0 VS Web 3.0",
         "articleBody": [
-        "WRIO Internet OS is a cloud service, designed to navigate through decentralized (and in due course – distributed), semantic and secure web. Some call it Web 3.0, and it is an evolutionary replacement of today’s Web 2.0.",
+        "WRIO Internet OS is a cloud service designed to navigate through a decentralized (and in due course, distributed), semantic and secure web. Some call it Web 3.0, an evolutionary replacement of today’s Web 2.0.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "What is Web 2.0: A centralized unsafe web.",
-        "Website-centric: Infoflow to websites.",
+        "What is the Web 2.0: A centralized unsafe web.",
+        "Website-centric: Info flows to the websites, not the users.",
         "Product: Social media and search engines.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "A Web 2.0 website may allow users to interact and collaborate with each other in a social media dialogue as creators of user-generated content in a virtual community, in contrast to the first generation of Web 1.0-era websites where people were limited to the passive viewing of content.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "A distinctive feature of Web 2.0 is the principle of engaging users in the accumulation and multiple inspection of content, however reliability, accuracy and objectivity issues are not examined.",
+        "A distinctive feature of the Web 2.0 is the principle of engaging users in the accumulation of content. However, reliability, accuracy and objectivity issues are not examined.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "What is Web 3.0: A secure and machine-readable distributed user-centric web.",
         "User-centric: Infoflow to user.",
@@ -232,7 +232,7 @@
         "@type": "Article",
         "name": "",
         "about": "Machine-readable data is data (or metadata) in a format that can be easily processed by a computer.",
-        "url": "https://en.wikipedia.org/wiki/Machine-readable_data?'machine-readable':5,565,external"
+        "url": "https://en.wikipedia.org/wiki/Machine-readable_data?'machine-readable':5,581,external"
         },
         {
         "@type": "Article",
@@ -250,7 +250,7 @@
         "@type": "Article",
         "name": "",
         "about": "A virtual assistant is a software agent that can perform tasks or services for an individual.",
-        "url": "https://en.wikipedia.org/wiki/Virtual_assistant_(artificial_intelligence)?'virtual assistants':19,146,external"
+        "url": "https://en.wikipedia.org/wiki/Virtual_assistant_(artificial_intelligence)?'virtual assistants':19,154,external"
         },
         {
         "@type": "Article",
@@ -365,17 +365,17 @@
         "contentUrl": "https://wrioos.com/img/mission-schema.jpg?28,0",
         "name": "Mission",
         "description": [
-        "[01. Fact] The Age of Internet of Things. The rapid increase in the number of Internet users and smart devices",
+        "[01. Fact] The Age of Internet of Things. The rapid increase in the number of Internet users and smart devices is undeniable",
         "[02. Problem] Generated information doubles every 18 months. Avalanche-like growth in volume of content and unstructured data",
-        "[03. How] Structured data (semantics). Structured data is a standardized format for providing information about a page and classifying the page content; for example, on a recipe page, what are the ingredients, the cooking time and temperature, the calories, and so on",
-        "[04. Solution] Semantic Web (Global Data Pool). “The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries”. The term was coined by Tim Berners-Lee for a web of data that can be processed by machines — that is, one in which much of the meaning is machine-readable",
-        "[05. Technology] Blockchain (MetaDataBase). Blockchain stores assets and metadata. Metadata is data that provides information about other data. Metadata is used to mark and record structured data in the key:value format, which is the basis for automatic data processing",
+        "[03. Magic] Structured data (semantics). Structured data is a standardized format for providing information about a page and classifying the page content; for example, on a recipe page these would be the ingredients, the cooking time and temperature, the calories, and so on",
+        "[04. Solution] Semantic Web (Global Data Pool). “The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries.” The term was coined by Tim Berners-Lee for a web of data that can be processed by machines — that is, one in which much of the meaning is machine-readable",
+        "[05. Technology] Blockchain (MetaDataBase). The blockchain stores assets and metadata. Metadata is data that provides information about other data. Metadata is used to mark and record structured data in the key:value format, which is the basis for automatic data processing",
         "[06. Feature] Automatic data processing and content distribution (Interest Matrix). Automatic correlation, classification, and cataloging of web data against users’ interest matrices will allow the creation of predictive user-centric services and search engines of new generation",
-        "[07. What] User-centric services and predictive search engines. Functions and interactivity are provided through cloud and distributed applications while all user actions and browsing are performed through a personal WRIO Internet OS web dashboard",
-        "[08. Tool] WRIO Internet OS. WRIO Internet OS based on these principles will enable a new market of cloud/distributed apps and affordable terminal devices with a browser-driven OS",
-        "[09. Future] Thin-client terminal devices (Individual Assistant). The era of smart predictive systems that will give rise to a new generation of web",
+        "[07. Functions] User-centric services and predictive search engines. Functions and interactivity are provided through cloud and distributed applications while all user actions and browsing are performed through a personal WRIO Internet OS web dashboard",
+        "[08. Tool] WRIO Internet OS. Based on these principles, WRIO Internet OS will enable new markets of cloud/distributed apps and affordable terminal devices with a browser-driven OS",
+        "[09. Future] Thin-client terminal devices (Individual Assistant). The era of smart predictive systems that will give rise to a new generation of the web",
         "[10. Objective] Evolution to secure machine-readable distributed Web 3.0. The accomplishment of the mission will serve as the technical foundation for the implementation of ideas of libertarian project The Alternative (TBA)",
-        "[11. Mission] Serve as the human-machine interpreter. Thus, to accomplish the mission we need a platform capable of upgrading nowadays’ Web 2.0 to machine-readable Web 3.0"
+        "[11. Mission] Serve as the human-machine interpreter. Thus, to accomplish the mission we need a platform capable of upgrading today’s Web 2.0 to the machine-readable Web 3.0"
         ]
         },
         {
