--- a/hub/index.html
+++ b/hub/index.html
@@ -354,7 +354,7 @@
         "@type": "ImageObject",
         "author": "webRunes",
         "contentUrl": "https://wrioos.com/img/mission.jpg?23,0",
-        "name": "Serve as the human-machine interpreter",
+        "name": "To serve as the human-machine interpreter",
         "description": [
         ""
         ]
