--- a/hub/collection/index.html
+++ b/hub/collection/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="webRunes">
     <meta name="keywords" content="">
-    <title>Collections</title>
+    <title>Collection</title>
 
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
         "@type": "ItemList",
-        "name": "Collections",
+        "name": "Collection",
         "description": "",
         "itemListElement": [
           {
