--- a/hub/index.html
+++ b/hub/index.html
@@ -425,14 +425,14 @@
         {
         "@context": "https://schema.org",
         "@type": "ItemList",
-        "name": "Collections",
+        "name": "Collection",
         "itemListElement": [
         {
         "@type": "ItemList",
-        "name": "Collections",
+        "name": "Collection",
         "description": "No description",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://wrioos.com/collections/"
+        "url": "https://wrioos.com/collection/"
         }
         ]
         }
