Discord ticket added

--- a/hub/collection/index.html
+++ b/hub/collection/index.html
@@ -38,19 +38,26 @@
           "image": "https://webrunes.com/img/white_paper-200x200.jpg",
           "url": "https://goo.gl/rVcPCV"
           },
-        {
-        "@type": "Article",
-        "name": "Join us!",
-        "about": "We are always looking for people who share our commitments and principles. If you want to assist in the development of the project, please join our Slack community.",
-        "image": "https://webrunes.com/img/slack-200x200.jpg",
-        "url": "https://join.slack.com/t/webrunes/shared_invite/enQtMzE3NzU3OTQ1NzUwLWEyYWNkNmMyZGI5MTY4MmVhYWJkMmI4ODJiNTE0NGNiY2E5NzZjMThmNTI4YWVhMDczYzYyMTViZmQzOThlY2M"
-        },
+          {
+          "@type": "Article",
+          "name": "Slack",
+          "about": "We are always looking for people who share our commitments and principles. If you want to assist in the development of the project, please join our Slack community.",
+          "image": "https://webrunes.com/img/slack-200x200.jpg",
+          "url": "https://join.slack.com/t/webrunes/shared_invite/enQtMzE3NzU3OTQ1NzUwLWEyYWNkNmMyZGI5MTY4MmVhYWJkMmI4ODJiNTE0NGNiY2E5NzZjMThmNTI4YWVhMDczYzYyMTViZmQzOThlY2M"
+          },
           {
           "@type": "Article",
           "name": "Telegram",
           "about": "You are welcome to become a member of the fast growing WRIO Internet OS community, and to take part in further development of the project!",
           "image": "https://webrunes.com/img/telegram-200x200.jpg",
           "url": "https://t.me/webRunesGroup"
+          },
+          {
+          "@type": "Article",
+          "name": "Discord",
+          "about": "We will be holding a series of bi-weekly public meetings on internal matters, where the community may ask questions about the project. Join us.",
+          "image": "https://webrunes.com/img/discord-200x200.png",
+          "url": "https://discord.me/webRunes"
           },
           {
           "@type": "Article",
