Support origin "file://" for articles saved via "Save as.. [Article]"  (reverted from commit aad9ce36124588efce0049f1f89cfa6625637406)

--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -11,16 +11,16 @@
 
     <link href="https://default.wrioos.com/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/material-kit.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://default.wrioos.com/css/material-kit.min.css">
+    <link rel="stylesheet" href="//default.wrioos.com/css/material-kit.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-    <link rel="stylesheet" href="https://default.wrioos.com/css/vertical-nav.css">
-    <link rel="stylesheet" href="https://default.wrioos.com/css/ripples.min.css">
+    <link rel="stylesheet" href="//default.wrioos.com/css/vertical-nav.css">
+    <link rel="stylesheet" href="//default.wrioos.com/css/ripples.min.css">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/wrioos.css" rel="stylesheet">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/core.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- <script>
          (function (i, s, o, g, r, a, m) {
              i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
