--- a/src/devserver/pinger/pingeriframe.html
+++ b/src/devserver/pinger/pingeriframe.html
@@ -15,7 +15,7 @@
     <link href="https://default.wrioos.com/css/core.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.js"> </script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
