--- a/hub/index.html
+++ b/hub/index.html
@@ -360,7 +360,7 @@
         "[07. Functions] User-centric services and predictive search engines. Functions and interactivity are provided through cloud and distributed applications while all user actions and browsing are performed through a personal WRIO Internet OS web dashboard",
         "[08. Tool] WRIO Internet OS. Based on these principles, WRIO Internet OS will enable new markets of cloud/distributed apps and affordable terminal devices with a browser-driven OS",
         "[09. Future] Thin-client terminal devices (Individual Assistant). The era of smart predictive systems that will give rise to a new generation of the web",
-        "[10. Objective] Evolution to secure machine-readable distributed Web 3.0. The accomplishment of the mission will serve as the technical foundation for the implementation of ideas of libertarian project The Alternative (TBA)",
+        "[10. Objective] Evolution to secure machine-readable distributed Web 3.0. The accomplishment of the objective will serve as the technical foundation for the implementation of ideas of libertarian project The Alternative (TBA)",
         "[11. Mission] Serve as the human-machine interpreter. Thus, to accomplish the mission we need a platform capable of upgrading today’s Web 2.0 to the machine-readable Web 3.0"
         ]
         },
