--- a/hub/index.html
+++ b/hub/index.html
@@ -181,7 +181,9 @@
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "The user-centric approach will revolutionize the browsing experience. Currently users are only able to choose a browser and define a set of plugins to be used with it. But with WRIO internet OS, user control goes one step higher: hubs’ authors determine the content, yet the display style and the set of functions are defined by the user. Web 2.0 sites are replaced with user-centric hubs of the Web 3.0.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Default WRIO Internet OS editor creates web pages based on schemas in semantic format JSON-LD (Linked Data): an HTML file is a set of static data (key-value). The page format has been developed by Google, Microsoft, Yahoo and Yandex. Page indexation requires no search engine optimization or syntax analysis, which ensures high organic search positions. The format of pages is machine-readable, which enables automatic data processing. This paves the way for the development of an automatic, curated web: metadata of each created page is recorded in the blockchain, then it is correlated to the user’s interest matrix stored in the profile. If there is a match, the page is displayed in the user’s web dashboard (webtop)—a key element of the user-centric web."
+        "Default WRIO Internet OS editor creates web pages based on schemas in semantic format JSON-LD (Linked Data): an HTML file is a set of static data (key-value). The page format has been developed by Google, Microsoft, Yahoo and Yandex. Page indexation requires no search engine optimization or syntax analysis, which ensures high organic search positions. The format of pages is machine-readable, which enables automatic data processing. This paves the way for the development of an automatic, curated web: metadata of each created page is recorded in the blockchain, then it is correlated to the user’s interest matrix stored in the profile. If there is a match, the page is displayed in the user’s web dashboard (webtop)—a key element of the user-centric web.",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Find more datails in the blog post “All You Need is a Browser.”."
         ]
         },
         {
@@ -333,6 +335,12 @@
         "name": "",
         "about": "A web desktop or webtop is a desktop environment embedded in a web browser or similar client application.",
         "url": "https://en.wikipedia.org/wiki/Web_desktop?'webtop'128,713,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "No description",
+        "url": "https://webrunes.com/blog/All_You_Need_is_a_Browser?'All you need is a browser'130,36"
         }
         ],
         "image": [
