--- a/hub/index.html
+++ b/hub/index.html
@@ -411,7 +411,7 @@
         }
         ],
         "author": "https://webrunes.com/?wr.io=713372365175",
-        "comment": "887324909919186944"
+        "comment": ""
         }
     </script>
 
