--- a/hub/index.html
+++ b/hub/index.html
@@ -32,7 +32,7 @@
         "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "En",
-        "keywords": "WRIO Internet OS, semantic, web 3.0, secure, decentralization",
+        "keywords": "WRIO Internet OS, semantic, web 3.0, secure, decentralization, JSON-LD",
         "name": "About",
         "about": "WRIO Internet OS is a PaaS and its cloud applications are SaaS (operating on remote servers). Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications act as conventional desktop programs with the intention to replace desktop OSs in the near future.",
         "articleBody": [
