--- a/hub/index.html
+++ b/hub/index.html
@@ -359,7 +359,7 @@
         "contentUrl": "https://wrioos.com/img/mission-schema.jpg?28,0",
         "name": "Mission",
         "description": [
-        "[01. Fact] The Age of Internet of Things. The rapid increase in the number of Internet users and smart devices is undeniable",
+        "[01. Fact] The Age of the Internet of Things. The rapid increase in the number of Internet users and smart devices is undeniable",
         "[02. Problem] Generated information doubles every 18 months. Avalanche-like growth in volume of content and unstructured data",
         "[03. Magic] Structured data (semantics). Structured data is a standardized format for providing information about a page and classifying the page content; for example, on a recipe page these would be the ingredients, the cooking time and temperature, the calories, and so on",
         "[04. Solution] Semantic Web (Global Data Pool). “The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries.” The term was coined by Tim Berners-Lee for a web of data that can be processed by machines — that is, one in which much of the meaning is machine-readable",
