--- a/hub/index.html
+++ b/hub/index.html
@@ -113,7 +113,7 @@
         "⨯ 32% of computers around the world are infected with viruses and malware",
         "Solution: WRIO OS processes pages in a read-only mode, ignoring all scripts, thus ensuring the user's security at all times, automatically.",
         "✓ high security",
-        "✓ functions and interactivity are provided through cloud and distributed applications",
+        "✓ functions and interactivity are provided through the cloud and distributed applications",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "Issue: Censorship.",
         "⨯ websites may be blocked",
