--- a/hub/index.html
+++ b/hub/index.html
@@ -120,7 +120,7 @@
         "Solution: Pages can be stored at any static content hosting. If a page is blocked, it may be accessed in a proxy-mode through one of the WRIO OS nodes.",
         "✓ no central point of failure. Nodes are interchangeable (Tor-like)",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Issue: Websites require search engine optimization, yet only 4% of web content (8 billion pages) is available via search engines like Google; the rest is in the Deep web unavailable to the majority of users due to the technical difficulty of access.",
+        "Issue: Websites require search engine optimization, yet only 4% of web content (8 billion pages) is available via search engines like Google; some information is intentionally closed but the rest is in the Deep web unavailable to the majority of users due to the technical difficulty of access.",
         "⨯ information is isolated; a database is required to store data",
         "⨯ less than 5% of pages are semantic, unstructured data",
         "⨯ an average web page contains just 14% of user-readable data, the rest is HTML markup, CSS, JS and so on",
